--- a/css/section_portfolio.css
+++ b/css/section_portfolio.css
@@ -1,11 +1,13 @@
 body{
     font-family: verdana;
     text-align: center;
+ 
 }
 
 section{
     margin: 0px;
     width: 100px;
+    
     
 }
 
@@ -23,10 +25,20 @@ table{
     width: 100%;
     border: 0px solid red;
     margin-top: 50px;
+    
 }
 img{
     width: 100%;
     border: 0px solid red;
-    border-radius: 10px;
+    border-radius: 10px;  
+}
+
+img:hover{
+         transition: 1s;
+ transform:scale(130%);
+}
+
+
+    
 }
 
